--- a/index.html
+++ b/index.html
@@ -29,25 +29,25 @@
       <div class="features-list">
         <div class="features-list__item features-list__item--1">
           <div class="features-list__image"></div>
-          <div class="features-list__text">Конкурентоспособная заработная плата.<br>Система бонусов.</div>
+          <div class="features-list__text">Конкурентоспособная заработная плата;<br>Система бонусов</div>
         </div>
         <div class="features-list__item features-list__item--2">
           <div class="features-list__image"></div>
-          <div class="features-list__text">Корпоративный<br>автомобиль.</div>
+          <div class="features-list__text">Корпоративный<br>автомобиль</div>
         </div>
         <div class="features-list__item features-list__item--3">
           <div class="features-list__image"></div>
-          <div class="features-list__text">Расширенный<br>социальный пакет.</div>
+          <div class="features-list__text">Расширенный<br>социальный пакет</div>
         </div>
       </div>
       <div class="features-list features-list--2">
         <div class="features-list__item features-list__item--4">
           <div class="features-list__image"></div>
-          <div class="features-list__text">Мобильная связь<br>и портативный компьютер.</div>
+          <div class="features-list__text">Мобильная связь<br>и портативный компьютер</div>
         </div>
         <div class="features-list__item features-list__item--5">
           <div class="features-list__image"></div>
-          <div class="features-list__text">Обучение и возможности<br>для развития.</div>
+          <div class="features-list__text">Обучение и возможности<br>для развития</div>
         </div>
       </div>
     </div>
@@ -114,17 +114,17 @@
         <div class="test-list__item test-list__item--2">
           <div class="test-list__icon"></div>
           <div class="test-list__title">Онлайн-тестирование</div>
-          <div class="test-list__text">Понадобятся несколько<br>минут твоего времени</div>
+          <div class="test-list__text">Понадобятся до 40 минут<br>твоего времени в любом<br>удобном для тебя месте</div>
         </div>
         <div class="test-list__item test-list__item--3">
           <div class="test-list__icon"></div>
           <div class="test-list__title">Онлайн-интервью</div>
-          <div class="test-list__text">Будь готов записать несколько<br>своих ответов на видео</div>
+          <div class="test-list__text">Будь готов ответить<br>на вопросы по своему<br>профессиональному опыту</div>
         </div>
         <div class="test-list__item test-list__item--4">
           <div class="test-list__icon"></div>
           <div class="test-list__title">Знакомство в офисе</div>
-          <div class="test-list__text">В случае успеха - с тобой<br>свяжутся наши специалисты.</div>
+          <div class="test-list__text">В случае успеха с тобой<br>свяжутся наши специалисты.</div>
         </div>
       </div><a href="#" class="button">Откликнуться на вакансию</a>
       <div class="test__link">Подробнее об отделе продаж ты можешь узнать на сайте <a href="http://mars-sales.ru/">http://mars-sales.ru/</a></div>
